[DONE] Fixed some problems

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body">
   <div class="color-div">
-    <header class="header vertical-align"><img src="./img/logo copia.png" alt=""></header>
+    <header class="header vertical-align"><img src="./img/Logo.png" alt=""></header>
     <h1 class="toboolist vertical-align">Toboolist</h1>
  </div>
 
@@ -19,26 +19,23 @@
         </div>
         <h2 class="spazio">&#x1F783; New Task</h2>
         <ul>
-            <li class="font"><span class="entities-1">&#x2713</span>Quarterly Newsletter <span class="forme-lista colore-1">Editorial</span></li>
+            <li class="font"><span class="entities-1">&#x2713;</span>Quarterly Newsletter <span class="forme-lista colore-1">Editorial</span></li>
         </ul>
         <h2 class="spazio-2">&#x1F783; Today</h2>
         <ul>
-            <li><span class="entities-1">&#x2713</span>Recruiting Blog Post <span class="forme-lista colore-1">editorial</span></li>
-            <li><span class="entities-1">&#x2713</span>Mobile App Launch <span class="forme-lista colore-2">Q1 Goals</span></li>
-            <li><span class="entities-2">&#x2717</span>Interwiev John H. <span class="forme-lista colore-3">Recruiting</span></li>
-            <li><span class="entities-1">&#x2713</span>Summit update to mobile storefronts <span class="forme-lista colore-4">Mobile</span></li>
+            <li><span class="entities-1">&#x2713;</span>Recruiting Blog Post <span class="forme-lista colore-1">editorial</span></li>
+            <li><span class="entities-1">&#x2713;</span>Mobile App Launch <span class="forme-lista colore-2">Q1 Goals</span></li>
+            <li><span class="entities-2">&#x2717;</span>Interwiev John H. <span class="forme-lista colore-3">Recruiting</span></li>
+            <li><span class="entities-1">&#x2713;</span>Summit update to mobile storefronts <span class="forme-lista colore-4">Mobile</span></li>
         </ul>
         <h2 class="spazio-2">&#x1F783; Upcoming</h2>
         <ul>
-            <li><span class="entities-2">&#x2717</span>Schedule meeting with Alex</li>
-            <li><span class="entities-1">&#x2713</span>Homepage refresh <span class="forme-lista colore-5">Website</span></li>
-            <li><span class="entities-1">&#x2713</span>Onboard new sales team members <span class="forme-lista colore-6">members</span></li>
-            <li><span class="entities-1">&#x2713</span>Rewiev editorial calendar <span class="forme-lista colore-1">Editorial</span></li>
+            <li><span class="entities-2">&#x2717;</span>Schedule meeting with Alex</li>
+            <li><span class="entities-1">&#x2713;</span>Homepage refresh <span class="forme-lista colore-5">Website</span></li>
+            <li><span class="entities-1">&#x2713;</span>Onboard new sales team members <span class="forme-lista colore-6">members</span></li>
+            <li><span class="entities-1">&#x2713;</span>Rewiev editorial calendar <span class="forme-lista colore-1">Editorial</span></li>
         </ul>
         </div>
-
-
-    </div>
     
 
     
